tests/baselines/reference/parserLabeledStatement1.d.errors.txt
==== tests/cases/conformance/parser/ecmascript5/Statements/parserLabeledStatement1.d.ts (2 errors) ====
    foo:
    ~~~
!!! error TS1036: Statements are not allowed in ambient contexts.
      bar();
      ~~~
!!! error TS2304: Cannot find name 'bar'.